kyverno-automation/resources/require-frontend-name/configmap-wrong.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: config
  namespace: frontend
data:
  key: value
