kyverno-automation/resources/require-frontend-name/deployment-wrong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
