kyverno-automation/resources/require-frontend-name/pod-correct.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-nginx
  namespace: frontend
spec:
  containers:
    - name: nginx
      image: nginx:1.25
