kyverno-automation/resources/require-frontend-name/pod-wrong.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: frontend
spec:
  containers:
    - name: nginx
      image: nginx:1.25
