kyverno-automation/resources/require-frontend-name/secret-correct.yaml
apiVersion: v1
kind: Secret
metadata:
  name: frontend-secret
  namespace: frontend
type: Opaque
data:
  key: dmFsdWU=
