kyverno-automation/resources/require-frontend-name/secret-wrong.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret
  namespace: frontend
type: Opaque
data:
  key: dmFsdWU=
