kyverno-automation/resources/require-frontend-name/service-wrong.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  namespace: frontend
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
